# station

./: .gitignore  Cargo.toml  README.md  deploy.sh  docker-compose.yml  inventory.sql  load_backup.sh  manual_db.sh  testing.env
res/: inventory.html  login.html  style.css
src/: auth.rs  inventory.rs  main.rs  state.rs
