[package]
name = "station"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }

# NOTE: 0.14.0 used for sqlx store 0.15.0
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }

dotenvy = "0.15"

argon2 = "0.5.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

maud = "0.27.0"

serde = "1.0.228"

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }

chrono = "0.4.43"
